Support input method for iOS7 or later(include iOS9) devices, but in US keyboard layout only.

--- a/libhidsupport/Makefile
+++ b/libhidsupport/Makefile
@@ -6,8 +6,8 @@ libhidsupport_INSTALL_PATH = /usr/local/lib
 libhidsupport_FRAMEWORKS = CoreFoundation
 
 # rocketbootstrap
-libhidsupport_CFLAGS     = -I/Projects/RocketBootstrap/
-libhidsupport_LDFLAGS   += -L/Projects/RocketBootstrap/.theos/obj
+libhidsupport_CFLAGS     = -I$(THEOS)/projects/RocketBootstrap/
+libhidsupport_LDFLAGS   += -L$(THEOS)/projects/RocketBootstrap/.theos/obj
 libhidsupport_LIBRARIES += substrate rocketbootstrap
 
 include $(FW_MAKEDIR)/library.mk
